--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
-       <h1> Core 1: Interaction Website </h1>
+       <h1> Avi's Core 1: Interaction Website </h1>
     </head> 
     <body>
         <br>
-        <p> <a href="ReadingResponse1.html"> Reading responses </a> </p>
+        <p> <a href="main_pages/ReadingResponse1.html"> Reading responses </a> </p>
         <p> <a href=""> Homework Assignments </a> </p>
         <br>
         <p> <a href=""> Previous </a> </p>  
