Renaming files in Main Pages

--- a/main_pages/readingresponse_listpage.html
+++ b/main_pages/readingresponse_listpage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <p> <a href=""></a> </p>
+        <h1> Reading Responses </h1>
     </head>
 <body>
-        <p> <a href=""> </a></p>
+        <p> <a href="../reading_responses/readingresponse1.html"> Week 1: Garden of Forking Paths </a></p>
         <br>
         <p> <a href="../index.html"> Go back </a> </p>
 </body>
