Fixing Homework and Reading Response Pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <br>
         <p> <a href="main_pages/readingresponse_listpage.html"> Reading responses </a> </p>
-        <p> <a href=""> Homework Assignments </a> </p>
+        <p> <a href="main_pages/homework_listpage.html"> Homework Assignments </a> </p>
         <br>
         <p> <a href=""> Previous </a> </p>  
         <p> <a href=""> Next </a> </p>
