--- a/main_pages/homework_listpage.html
+++ b/main_pages/homework_listpage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <p> <a href=""></a> </p>
+        <h1> Homework Assignments </h1>
     </head>
 <body>
-        <p> <a href=""> </a></p>
+        <p> <a href="../homework/house_assignment/ENTRANCE.html"> Week 1: House Project </a></p>
         <br>
         <p> <a href="../index.html"> Go back </a> </p>
 </body>
