Adding Structure to Homework Pages

--- a/main_pages/homework_listpage.html
+++ b/main_pages/homework_listpage.html
@@ -4,8 +4,19 @@
         <h1> Homework Assignments </h1>
     </head>
 <body>
-        <p> <a href="../homework/house_assignment/ENTRANCE.html"> Week 1: House Project </a></p>
+        <p> <a href="../homework/house_assignment/ENTRANCE.html"> House Project In Pure HTML </a></p>
+        <br>
+        <p> <a href=> House Project In Pure HTML </a> </p>
+        <br>
+        <p> <a href=> House Project With CSS </a> </p>
+        <br>
+        <p> <a href=> Copy Menu </a> </p>
+        <br>
+        <p> <a href=> Fictional Menu </a> </p>
+        <br>
+        <p> <a href=> Harmonic Collection Museum </a></p>
         <br>
         <p> <a href="../index.html"> Go back </a> </p>
+    `   <br>
 </body>
 </html>
