Adding ascii to house

--- a/homework/house_assignment/ENTRANCE.html
+++ b/homework/house_assignment/ENTRANCE.html
@@ -8,6 +8,21 @@
     <div>
     <p> “hello. i hope you aren’t tired after climbing all those flights of stairs. sorry, it isn’t very clean in the apartment right now, no one else has been here in a while. i didn’t expect you so soon, or at all.” </p>
     <br>
+    <pre>   
+            __________
+           |  __  __  |
+           | |  ||  | |
+           | |  ||  | |
+           | |__||__| |
+           |  __  __()|
+           | |  ||  | |
+           | |  ||  | |
+           | |  ||  | |
+           | |  ||  | |
+           | |__||__| |
+           |__________|
+    </pre>
+    <br>
     <p> <a href="LIVINGROOM.html"> take off your coat and shoes </a> </p>
     <p> <a href="ENTRANCE_leave.html"> make an excuse and turn around </a> </p>
     </div>
