--- a/homework/house_assignment/LIVINGROOM.html
+++ b/homework/house_assignment/LIVINGROOM.html
@@ -6,6 +6,30 @@
 <body>
     <p> “here's my living room! i’m so glad you came by. i haven’t seen you in so long.  i’m sorry that it’s pretty cramped in here. all these flats are just so small, you know? please, make yourself comfortable.” </p>
     <br>
+    <pre>
+    ________________________________________________________________________
+|: : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : |
+|__________ : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : :|
+|__]\% % % | : : : : : : : : : : : : : : : : : : : : : : : : : : : : : : |
+|___]\% % %|: :______ : : : : : : : : : : : : : : : : : : : : :___: : : :|
+|____]\% % | :|======| :_: : : : : : . : : : : : :_: : : : : :/   \: : : |
+|_____]\% %|: ||\|||||:/_\: :,: : :.'o'.: : :,: :/_\: : : : :|//   |: : :|
+|______]\% | :|======| =|= __#_____|___|_____#__ =|= : : : : | ,*, | : : |
+|_______]\%|: |______|: ^ :[___]           [___]: ^ : : : : : \*;*/ : : :|
+|________]\| :|__  __| : : [_|_] o  `(,  o [_|_] : : : : :_____(_)_____: |
+|_________]\: | .||. |: : :[___] |  ( )  | [___]: : :_!_: ||   .|.   || :|
+|__________]==|__||__|====_[_|_]/!\_@@@_/!\[_|_]_===/___\=||____|____||==|
+     _                    '====================='     | _                |
+    |_)         __.;;.__      _______________         |( |               |
+    /_\__      / ;(;;); \    (               )       _|_)|               |
+  ~=_|_ _)====/__________\==(\               /)=====(____|========~      |
+ ~=|___|LL====|==========|===|               |======LLLLLL=========~     |
+~============================|_______________|======================~    |
+=============================LLLLLLLLLLLLLLLLL=======================~   |
+lc====================================================================~  '
+
+
+    </pre>
     <p> <a href="LIVINGROOM_action1.html"> rinse out a glass from the sink </a> </p>
     <p> <a href="LIVINGROOM_action2.html"> fall asleep on the couch </a> </p>
     <p> <a href="LIVINGROOM_action3.html"> clear away letters from the dining table </a> </p>
