Connecting House With CSS to Homework

--- a/homework/house_assignment with css/ENTRANCE.html
+++ b/homework/house_assignment with css/ENTRANCE.html
@@ -22,6 +22,12 @@
     |__________|
     </pre>
     <br>
+    <div align="center">
+    <audio controls>
+        <source src="windpianosounds.mp3" type="audio/mpeg"
+    Your browser does not support the audio elements.
+    </audio>
+    </div>   
     <p> <a href="LIVINGROOM.html"> take off your coat and shoes </a> </p>
     <p> <a href="ENTRANCE_leave.html"> make an excuse and turn around </a> </p>
     </div>
