--- a/main_pages/homework_listpage.html
+++ b/main_pages/homework_listpage.html
@@ -6,9 +6,8 @@
 <body>
         <p> <a href="../homework/house_assignment/ENTRANCE.html"> House Project In Pure HTML </a></p>
         <br>
-        <p> <a href=> House Project In Pure HTML </a> </p>
         <br>
-        <p> <a href=> House Project With CSS </a> </p>
+        <p> <a href="../homework/house_assignment%2520with%2520css/ENTRANCE.html"> House Project With CSS </a> </p>
         <br>
         <p> <a href=> Copy Menu </a> </p>
         <br>
