--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-   <head>
-       <h1> Avi's Core 1: Interaction Website </h1>
-    </head> 
-    <body>
-        <br>
-        <p> <a href="main_pages/readingresponse_listpage.html"> Reading responses </a> </p>
-        <p> <a href="main_pages/homework_listpage.html"> Homework Assignments </a> </p>
-        <br>
-        <p> <a href=""> Previous </a> </p>  
-        <p> <a href=""> Next </a> </p>
-    </body>
+    <head> 
+        <link rel="stylesheet" href="style/style.css">
+    </head>
+<body>
+    <p class="header"> CORE 1: INTERACTIONS </p>  
+    <p class="title"> AVI DEEP </p>
+
+    <img src="city.png">
+    <p class="subheading"> PROJECTS </p>    
+    <p> <a href="homework/readingresponse1.html"class="project" > Reading Response 1: Garden Of Forking Paths </a> </p>
+        <p> <a href="homework/house_assignment/ENTRANCE.html" class="project"> Project 1: House In Pure HTML </a></p>
+        <p> <a href="homework/house_assignment_with_css/ENTRANCE.html" class="project"> Project 2: House With CSS </a> </p>
+        <p> <a class="project" href="homework/recreated_menu/menu.html"> Project 3: Recreated Menu </a> </p>
+        <p> <a class="project" href=> Project 4: Fictional Menu </a> </p>
+        <p> <a class="project" href=> Project 5: Harmonic Collection Museum </a></p>
+                
+</body>
 </html>
