Updating house, menu, and musuem

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     </head>
 <body>
     <p class="header"> CORE 1: INTERACTIONS </p>  
-    <p class="title"> AVI DEEP </p>
-
-    <img src="city.png">
-    <p class="subheading"> PROJECTS </p>    
-    <p> <a href="homework/readingresponse1.html"class="project" > Reading Response 1: Garden Of Forking Paths </a> </p>
+    <p class="title"> AVI DEEP'S PROJECTS </p>   
+    <p> <a href="homework/readingresponse1.html"class="project" > Reading Responses </a> </p>
         <p> <a href="homework/house_assignment/ENTRANCE.html" class="project"> Project 1: House In Pure HTML </a></p>
         <p> <a href="homework/house_assignment_with_css/ENTRANCE.html" class="project"> Project 2: House With CSS </a> </p>
         <p> <a class="project" href="homework/recreated_menu/menu.html"> Project 3: Recreated Menu </a> </p>
-        <p> <a class="project" href=> Project 4: Fictional Menu </a> </p>
-        <p> <a class="project" href=> Project 5: Harmonic Collection Museum </a></p>
+        <p> <a class="project" href="homework/fictional_menu/fictional_menu.html"> Project 4: Fictional Menu </a> </p>
+        <p> <a class="project" href=homework/musuem/musuem.html> Project 5: Harmonic Collection Museum </a></p>
                 
 </body>
 </html>
