--- a/homework/fictional_menu/fictional_menu.html
+++ b/homework/fictional_menu/fictional_menu.html
@@ -26,7 +26,7 @@
                 <p class=foodname> Rustic Honey Cake </p>
                 <p class=foodname> Dutch-Oven Bread </p>
                 <p class=foodname> Cherry Plum Slab Pie </p>
-                <p classs=foodname> Pistachio Rose Panna Cotta </p>
+                <p class=foodname> Pistachio Rose Panna Cotta </p>
 
         
         <p class=subheading> Pantry </p>
