Adding entry 2 and 3

--- a/homework/musuem/entries/entry2/entry2.html
+++ b/homework/musuem/entries/entry2/entry2.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html> 
 <html>
     <head>
+         <script src="script.js"></script> 
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <pre> 
+        <pre onmouseover="stanza1()"> 
 i
 
 
 Tell me it was for the hunger
 and nothing less. 
         </pre>
-        <pre class="hidden">
+        <pre id="hidden1" class="hidden">
 For hunger is to give
 the body what it knows
 
 it cannot keep. 
         </pre>
-        <pre>
+        <pre onmouseover="stanza2()">
 That this amber light
 whittled down by another war
 is all that pins my hand
 
 to your chest.
 
-        </pre>
-        <pre>
 i
-
 
 I’ll tell you how we’re wrong enough to be forgiven. How one night, after
 backhanding
@@ -35,12 +33,12 @@ mother, then taking a chainsaw to the kitchen table, my father went to kneel
 in the bathroom until we heard his muffled cries through the walls.
 
         </pre>
-        <pre class="hidden">
+        <pre id="hidden2" class="hidden">
 And so I learned that a man, in climax, was the closest thing
 to surrender.
 
         </pre>
-        <pre>
+        <pre onmouseover="stanza3()">
 i
 
 
@@ -51,45 +49,44 @@ in your eyes. Beauty despite
 daylight.
 
         </pre>
-        <pre class="hidden">
+        <pre id="hidden3" class="hidden">
         Say you’d kill for it. Unbreakable dawn
 mounting in your throat.
 
         </pre>
-        <pre>
+        <pre onmouseover="stanza4()">
 My thrashing beneath you
 like a sparrow stunned
 with falling.
-        </pre>
-        <pre>
+        
 i
 
 Dusk: a blade of honey between our shadows, draining.
 
 i
         </pre>
-        <p class="hidden">
+        <p id="hidden4" class="hidden">
 
 
 I wanted to disappear — so I opened the door to a stranger’s car. He was divorced. He was still alive. He was sobbing into his hands (hands that tasted like rust). The pink breast cancer ribbon on his keychain swayed in the ignition. Don’t we touch each other just to prove we are still here? I was still here once. The moon, distant & flickering, trapped itself in beads of sweat on my neck. I let the fog spill through the cracked window & cover my fangs. When I left, the Buick kept sitting there, a dumb bull in pasture, its eyes searing my shadow onto the side of suburban houses. At home, I threw myself on the bed like a torch & watched the flames gnaw through my mother’s house until the sky appeared, bloodshot & massive. How I wanted to be that sky — to hold every flying & falling at once.
 
         </p>
-        <pre>
+        <pre onmouseover="stanza5()">
 i
 
 
 Say amen. Say amend.
 
         </pre>
-        <pre class="hidden">
+        <pre id="hidden5" class="hidden">
 Say yes. Say yes
 
 anyway.
 
 
         </pre>
-        <pre>
-        i
+        <pre onmouseover="stanza6()">
+i
 
 
 In the shower, sweating under cold water, I scrubbed & scrubbed.
@@ -116,7 +113,7 @@ with gnats & summer too early
 to leave any marks.
 
         </pre>
-        <pre class="hidden">
+        <pre id="hidden6" class="hidden">
 Your hand under my shirt as static
 intensifies on the radio.
 Your other hand pointing
